<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.february.whoareyou.view.main.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.main.MainActivity"
        android:orientation="vertical"
        android:background="@color/AppColor1"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_border"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                style="@style/Text.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/rule"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView1"
                style="@style/Text.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rule1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                style="@style/Text.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rule2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView3"
                style="@style/Text.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rule3"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/Text.TitleStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/rule4"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/search_editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/rectangle_text"
            android:ems="10"
            android:hint="@string/enterNickname"
            android:layout_margin="20dp"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@={viewModel.nickName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            style="@style/Text.TitleStyle"
            android:backgroundTint="@color/AppColor2"
            android:onClick="@{(v) -> viewModel.signIn()}"
            android:text="@string/start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_editText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>